# GroqCli-Chatbot

./: .env.example  .gitignore  README.md  pyproject.toml
conversations/: conversation_20260209_010826.json  conversation_20260209_012804.json  conversation_20260209_020242.json  conversation_20260209_094615.json  conversation_20260209_103033.json
src/growcli/: __init__.py  banner.py  chat_engine.py  config.py  conversation_manager.py  cost_tracker.py  input_handler.py  main.py  model_selector.py  prompts.py  syntax_highlighter.py  templates.py  utils.py
tests/: test_chat_engine.py  test_config.py
